feat(WebUI): create sign-up and sign-in pages

--- a/WebUI/src/styles.css
+++ b/WebUI/src/styles.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+img {
+    -webkit-user-drag: none;
+}
 
 /* @layer components {
     .active-nav-link {
