--- a/WebUI/src/app/views/pages/disk/disk.component.html
+++ b/WebUI/src/app/views/pages/disk/disk.component.html
@@ -1,4 +1,4 @@
-<div class="container py-7 px-10">
+<div class="container flex flex-col py-7 px-10">
   <div class="flex items-center mb-10">
     <p class="text-[17px] font-medium mr-5">Document</p>
     <p class="mr-5 font-medium">></p>
@@ -9,30 +9,38 @@
 
   <h3 class="mb-5 text-3xl font-medium">Andrey</h3>
 
-  <div class="max-h-[calc(100vh-190px)] overflow-y-auto">
+  <div #scrollContainer class="max-h-[calc(100vh-250px)] overflow-y-auto mb-5">
     <div class="grid grid-cols-4 py-3 sticky top-0 bg-white border-b-2">
       <p>Название</p>
       <p>Владелец</p>
       <p>Изменено</p>
       <p>Размер</p>
     </div>
-    @for (resource of resources; track $index) {
+    @for (resource of resources(); track $index) {
     <div
-      class="grid grid-cols-4 py-3 justify-items-start hover:bg-stone-100 cursor-pointer"
+      class="grid grid-cols-4 py-3 items-center hover:bg-stone-100 cursor-pointer"
     >
       <div class="flex items-center pl-5">
         <img src="assets/folder.svg" class="w-9 mr-3" alt="" />
-        <p>{{ resource.name }}</p>
+        <p>{{ resource.name | slice }}</p>
       </div>
 
       <div class="flex items-center">
         <img src="assets/unknown-avatar.svg" class="w-9 mr-3" alt="" />
-        <p>{{ resource.ownerName }}</p>
+        <p>{{ resource.ownerName | slice }}</p>
       </div>
 
-      <p>{{ resource.updatedAt }}</p>
-      <p>{{ resource.size }}</p>
+      <p>{{ resource.updatedAt | slice }}</p>
+      <p>{{ resource.size | slice }}</p>
     </div>
     }
   </div>
+
+  <button
+    class="flex items-center self-end bg-slate-100 px-3 py-2 rounded-lg hover:bg-slate-200 transition-colors ease-in"
+    (click)="addFolder()"
+  >
+    <img class="w-5 h-5 mr-2" src="assets/add.svg" alt="" draggable="false" />
+    Добавить папку
+  </button>
 </div>
